DuPont DevSB/src/objects/ccrz__E_Order__c.object
<CustomObject>
    <description>The E_Order__c object contains the header data of placed order.</description>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Account of the User that this order was placed for.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>E_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Post order placement adjustment amount that can be used by back-end processing to adjust an order total without adjusting other fields.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentReason__c</fullName>
        <description>Optional reason text for the Adjustment Amount field.</description>
        <label>Adjustment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains the bill to address data. This will be a unique copy of the address information captured during checkout.</description>
        <label>Bill To</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipName>E_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerCompanyName__c</fullName>
        <description>Deprecated</description>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerEmail__c</fullName>
        <description>Email address captured during the checkout process.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerFirstName__c</fullName>
        <description>First name captured during the checkout process.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerLastName__c</fullName>
        <description>Last name captured during the checkout process.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerMobilePhone__c</fullName>
        <description>Deprecated</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__BuyerPhone__c</fullName>
        <description>Phone number captured during the checkout process.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__CCEmailAddress__c</fullName>
        <description>List of whitespace separated email addresses. Should only be used in low volume order implementations. Contains the list of email addresses that the order confirmation was sent to.</description>
        <label>CCEmailAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CCSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The subscription this order belongs to</description>
        <label>CCSubscription</label>
        <referenceTo>ccrz__E_Subscription__c</referenceTo>
        <relationshipLabel>CC Orders</relationshipLabel>
        <relationshipName>CCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Contact of the User that this order was placed for.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Orders</relationshipLabel>
        <relationshipName>CC_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ContractId__c</fullName>
        <description>Deprecated</description>
        <label>Contract ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>The currency that the order was place in.</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveAccountID__c</fullName>
        <description>Holds the effective account for this order.  This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own.  The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</description>
        <inlineHelpText>This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own.  The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</inlineHelpText>
        <label>Effective Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EncryptedId__c</fullName>
        <description>Semi-random id used to refer to the order in URLs.</description>
        <label>Encrypted Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__ExtCarrier__c</fullName>
        <description>Deprecated</description>
        <label>Ext Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated</description>
        <label>Ext ShipTo</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtShipTrackNo__c</fullName>
        <description>Deprecated</description>
        <label>Ext ShipTrack No</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IsAnonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if this is an anonymous checkout</description>
        <label>Is Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Name__c</fullName>
        <description>Carried over from the cart name that was used to place this order.</description>
        <label>Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Note__c</fullName>
        <description>Note</description>
        <label>Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderDate__c</fullName>
        <description>The date of the order.</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderId__c</fullName>
        <description>External id reference.</description>
        <externalId>true</externalId>
        <label>Order Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__OrderName__c</fullName>
        <description>Field to grab the standard name from the Order object.
This field was created due to a defect in Salesforce returning Name__c instead of Name in email templates.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Name (Duplicated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderNumber__c</fullName>
        <description>Derived from the SFDC Name field as the digit portion of the order Name + 1000000.</description>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__OrderSeller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Typically used in split order scenarios.  This field will represent, for a split order, the seller to which this order belongs.</description>
        <label>Order Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>Seller Orders</relationshipLabel>
        <relationshipName>SellerOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderStatus__c</fullName>
        <description>Displayed order status. Orders initially placed are all in Order Submitted status. All other statuses may be implementation specific.</description>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancel Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Return Submitted</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Partial Shipped</fullName>
                </value>
                <value>
                    <fullName>Bill Of Material</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent order, which originally submitted the subscription for this order, if applicable</description>
        <inlineHelpText>Parent order, which originally submitted the subscription for this order, if applicable</inlineHelpText>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Children Orders</relationshipLabel>
        <relationshipName>E_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginatedCart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the CC Cart object used to create this order.</description>
        <label>Originated Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipName>E_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PONumber__c</fullName>
        <description>Deprecated</description>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PaymentMethod__c</fullName>
        <description>The payment method defined in E_PaymentDetail__c.Payment_Method__c.</description>
        <label>PaymentMethod</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>Request date captured during the checkout process.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipAmount__c</fullName>
        <description>Order shipment charges.</description>
        <label>Ship Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ship complete indicator captured during the checkout process.</description>
        <label>Ship Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipDiscountAmount__c</fullName>
        <description>Post order placement offset that can be used to adjust the shipment amount.</description>
        <label>Ship Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipMethod__c</fullName>
        <description>Shipment method captured during the checkout process.</description>
        <label>Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipStructure__c</fullName>
        <description>Designates the shipping data structure used for this order.  Valid values are empty or lli but will be expanded in the future.</description>
        <label>Ship Structure</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Contact Address object that contains the ship to address data. This will be a unique copy of the address information captured during checkout.</description>
        <label>Ship To</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipName>E_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SkipTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the tax calculation was skipped during checkout.</description>
        <label>Skip Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SplitParentOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When an order is split into one or more child orders this field references the source order that this child was split from.</description>
        <label>Split Parent Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Orders (Split Parent Order)</relationshipLabel>
        <relationshipName>OrderSplits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SplitProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The split processed flag is used to indicate that the order has been processed for splitting.  When set to TRUE, this means that any process which is responsible for splitting orders will ignore this order.</description>
        <label>Split Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront under which the order was placed.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubtotalAmount__c</fullName>
        <description>Sum of CC Orer Item : Item Total</description>
        <label>Subtotal Amount</label>
        <summarizedField>ccrz__E_OrderItem__c.ccrz__ItemTotal__c</summarizedField>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxAmount__c</fullName>
        <description>Tax amount captured during order placement.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxExemptFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if the order was tax exempt. Copied from the cart during order placement.</description>
        <label>Tax Exempt Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxSubTotalAmount__c</fullName>
        <description>Sum of CC Orer Item : Item Total</description>
        <label>Tax SubTotal Amount</label>
        <summarizedField>ccrz__E_OrderItem__c.ccrz__ItemTotal__c</summarizedField>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalAmount__c</fullName>
        <description>ShipAmount__c + SubtotalAmount__c + TaxAmount__c + AdjustmentAmount__c + ShipDiscountAmount__c + TotalSurcharge__c</description>
        <formula>ccrz__ShipAmount__c + ccrz__SubtotalAmount__c + ccrz__TaxAmount__c +  ccrz__AdjustmentAmount__c  +  ccrz__ShipDiscountAmount__c + ccrz__TotalSurcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalDiscount__c</fullName>
        <description>Total discount as copied from the Cart.</description>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalSurcharge__c</fullName>
        <description>Surcharge captured during order placement.</description>
        <label>Total Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the User that this order was placed for.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__VerifyExemptionFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <label>VerifyExemptionFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Order</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ccrz__OrderDate__c</columns>
        <columns>ccrz__OrderStatus__c</columns>
        <columns>ccrz__SubtotalAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__DefaultStore</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ccrz__OrderDate__c</columns>
        <columns>ccrz__OrderStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>equals</operation>
            <value>DefaultStore</value>
        </filters>
        <label>DefaultStore</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>O-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>